--- a/gtc_osiris_environment.yml
+++ b/gtc_osiris_environment.yml
@@ -4,13 +4,12 @@ channels:
   - defaults
 dependencies:
   - python=3.8
-  - astropy=4.3.1
-  - astroquery=0.4.4
-  - astroscrappy=1.0.8
-  - ccdproc=2.2.0
-  - matplotlib=3.2.2
-  - numpy=1.18.5
-  - photutils=1.1.0
-  - pip=21.3.1
-  - scipy=1.7.2
-  - sep=1.2.0
+  - astropy
+  - astroquery
+  - astroscrappy
+  - ccdproc
+  - matplotlib
+  - numpy
+  - photutils
+  - scipy
+  - sep
